# fri3nd-connect

./: Cargo.toml
crates/friend_connect/: Cargo.toml
crates/portal/: Cargo.toml
crates/real_time_activity/: Cargo.toml
crates/real_time_activity/src/: builder.rs  event.rs  lib.rs  message.rs  status.rs
crates/xbl_auth/src/: cache.rs  expire.rs  lib.rs  msa_live.rs
crates/xbl_auth/src/request_token/: mod.rs  xsts_token.rs
crates/xbox_auth/: Cargo.toml
crates/xbox_auth/src/: cache.rs  crypto.rs  lib.rs
crates/xbox_auth/src/request_token/: mod.rs  xbox_device_token.rs  xbox_title_token.rs  xbox_user_token.rs  xsts_token.rs
