[package]
name = "friend_connect"
version = "0.1.0"
edition = "2021"

[dependencies]


[workspace]
members = [ "crates/portal", "crates/real_time_activity","crates/xbl_auth"]

[workspace.dependencies]
xbl_auth = { path = "./crates/xbl_auth" }
real_time_activity = { path = "./crates/real_time_activity" }

reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
