[package]
name = "real_time_activity"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
xbl_auth.workspace = true

futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }